--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -459,6 +459,8 @@
  CHI_revolution_neutrality_DEF:0 "Китайская Революционная Хунта"
  CHI_revolution_fascism:0 "Китайская Революционная Хунта"
  CHI_revolution_fascism_DEF:0 "Китайская Революционная Хунта"
+ CHI_provisional:0 "Китайская Республика"
+ CHI_provisional_DEF:0 "Временное Правительство Китайской Республики"
  CHI_neutrality_sichuan:0 "Сычуань"
  CHI_neutrality_sichuan_DEF:0 "Военное Правительство Сычуаня"
  CHI_neutrality_hubei:0 "Хубэй"
@@ -1323,7 +1325,8 @@
  MAN_jurchen_ADJ:0 "Чжурчжэньск"
  MON_CHI_subject:0 "Провинция Внешняя Монголия"
  MON_CHI_subject_DEF:0 "Провинция Внешняя Монголия"
- MON_QIN_subject:0 "Внешняя Монголия"
+ MON_QIN_subject:0 "Монголия"
+ MON_QIN_subject_DEF:0 "Монгольские Хошуны"
  MON_KOR_subject:0 "Внешняя Монголия"
  MON_republic_communism:0 "Монгольская Народная Республика"
  MON_republic_communism_DEF:0 "Монгольская Народная Республика"
@@ -1940,3 +1943,6 @@
  
  SER_AUH_neutrality:0 "Сербия"
  SER_AUH_fascism:0 "Сербия"
+ 
+ XSM_QIN:0 "Цинхай"
+ XSM_QIN_DEF:0 "Провинция Цинхай"
