--- a/localisation/russian/replace/replace_ideas_l_russian.yml
+++ b/localisation/russian/replace/replace_ideas_l_russian.yml
@@ -9,3 +9,8 @@
  idea_PAR_the_aftershock_of_the_tripple_alliance_instant_desc:0 ""
  idea_PAR_the_aftershock_of_the_tripple_alliance_desc:0 "Война против Тройственного альянса с Бразилией, Аргентиной и Уругваем была чрезвычайно кровопролитной для нашей страны: большая часть населения погибла от болезней и сражений в рядах нашей армии. Это оставило значительные шрамы на нашей нации, которые сохранились и по сей день."
  
+ 
+ 
+ 
+ 
+ idea_PAR_the_aftershock_of_the_tripple_alliance:0 "Отголоски Тройственного альянса"
