--- a/localisation/russian/replace/replace_research_l_russian.yml
+++ b/localisation/russian/replace/replace_research_l_russian.yml
@@ -273,13 +273,13 @@
  tech_recon4:0 "Разведрота IV"
  tech_recon4_desc:0 "Разведоперации в глубоком тылу, совмещающие шпионаж, партизанскую борьбу и диверсионные действия, расширят наши тактические возможности и позволят быстрее принимать решения."
  tech_recon5:0 "Разведрота V"
- tech_recon5_desc:0 "Отправка небольших групп на разведку перед движением основных сил позволяет нам собрать разведданные о том, где находится враг и с каким количеством противника мы сталкиваемся."
+ tech_recon5_desc:0 "Отправив небольшой отряд бойцов на разведку, прежде чем выдвинуть основную группу войск, мы получим информацию о количестве и расположении вражеских частей."
  tech_recon6:0 "Разведрота VI"
- tech_recon6_desc:0 "Разведывательные миссии часто бывают опасными, а потери высоки. Подготовка наших патрулей к быстрому перемещению и отходу и их оснащение для преодоления препятствий, установленных противником, увеличит их шансы вернуться."
+ tech_recon6_desc:0 "Разведывательные операции смертельно опасны. Если мы научим наши патрули быстро перемещаться и отступать и оснастим средствами для устранения препятствий, созданных противником, то увеличим их шансы на успешное возвращение."
  tech_recon7:0 "Разведрота VII"
- tech_recon7_desc:0 "Совершенствование радиотехнологий меняет способ выполнения разведывательных миссий, позволяя быстро передавать собранные разведданные."
+ tech_recon7_desc:0 "Новейшие разработки в области радио изменили метод ведения разведопераций - теперь можно быстро передать полученные сведения."
  tech_recon8:0 "Разведрота VIII"
- tech_recon8_desc:0 "Операции глубокой разведки, сочетающие шпионаж, партизанские операции и подготовку коммандос, помогут нам в выборе тактики и позволят быстро адаптировать наши решения."
+ tech_recon8_desc:0 "Разведоперации в глубоком тылу, совмещающие шпионаж, партизанскую борьбу и диверсионные действия, расширят наши тактические возможности и позволят быстрее принимать решения."
 
  #KiS | Engineer Company
  tech_engineers:0 "Саперная рота I"
@@ -291,13 +291,13 @@
  tech_engineers4:0 "Саперная рота IV"
  tech_engineers4_desc:0 "Сохраняя локальную мобильность и создавая то, что раньше считалось бы постоянными укреплениями и системами снабжения, инженерные войска будущего обеспечат наших солдат защитой везде, где бы их ни атаковали."
  tech_engineers5:0 "Саперная рота V"
- tech_engineers5_desc:0 "Строительство укреплений и прорыв препятствий делают боевых инженеров жизненно необходимыми в полевых условиях. Наделение наших инженеров универсальной ролью позволяет нам использовать их в различных ситуациях, где они будут необходимы."
+ tech_engineers5_desc:0 "Инженеры, занимающиеся возведением укреплений и защиты от прорывов, незаменимы на поле боя. Поскольку они универсальны, их можно использовать в самых разных ситуациях."
  tech_engineers6:0 "Саперная рота VI"
- tech_engineers6_desc:0 "С помощью современного оборудования и взрывчатых веществ наши инженеры могут выйти за рамки своих традиционных задач и удивить врага своей изобретательностью, на суше и на море."
+ tech_engineers6_desc:0 "Оснащенные современным оборудованием и мощной взрывчаткой, наши инженеры выполняют не только привычные для них задания. Они могут удивить противника своими находками как на земле, так и на море."
  tech_engineers7:0 "Саперная рота VII"
- tech_engineers7_desc:0 "Военно-инженерные проекты приближаются к более масштабным. Строительство современных инфраструктурных сооружений позволяет проводить операции, требующие поставок сверх того, что обычно имеется в полевых условиях."
+ tech_engineers7_desc:0 "Военные инженерные проекты становятся все более масштабными. Создание современной инфраструктуры позволит проводить операции, для которых нужны ресурсы, недоступные на поле боя."
  tech_engineers8:0 "Саперная рота VIII"
- tech_engineers8_desc:0 "Сохраняя местную мобильность при строительстве того, что раньше считалось постоянными укреплениями и системами снабжения, боевые инженеры будущего обеспечат готовность наших войск, где бы они ни были атакованы."
+ tech_engineers8_desc:0 "Сохраняя локальную мобильность и создавая то, что раньше считалось бы постоянными укреплениями и системами снабжения, инженерные войска будущего обеспечат наших солдат защитой везде, где бы их ни атаковали."
 
  #KiS | Field Hospital
  tech_field_hospital:0 "Полевой госпиталь I"
@@ -309,13 +309,13 @@
  tech_field_hospital4:0 "Полевой госпиталь IV"
  tech_field_hospital4_desc:0 "Несмотря на достижения военно-полевой медицины, многие изобретения сделаны наскоро, и у нас нет общей доктрины. Накопив достаточно опыта, мы можем точнее очертить круг задач этих частей и сделать временные улучшения постоянными."
  tech_field_hospital5:0 "Полевой госпиталь V"
- tech_field_hospital5_desc:0 "Раненый - это не обязательно мертвый солдат. Наличие немедленной медицинской помощи для наших раненых, доставленных в тыл, является первым шагом к обеспечению этого."
+ tech_field_hospital5_desc:0 "«Потеря» еще не означает, что боец погиб. Экстренная медицинская помощь раненым, доставленным в тыл, - первый шаг на пути к спасению жизни."
  tech_field_hospital6:0 "Полевой госпиталь VI"
- tech_field_hospital6_desc:0 "Наладив использование портативных больниц, доставляя медицинскую помощь туда, где она необходима, мы сможем остановить множество ненужных смертей и необратимых травм."
+ tech_field_hospital6_desc:0 "Используя передвижные госпитали и оказывая помощь там, где она нужнее всего, мы предотвратим немало лишних смертей и неизлечимых травм."
  tech_field_hospital7:0 "Полевой госпиталь VII"
- tech_field_hospital7_desc:0 "Хирургия относится к числу наиболее распространенных неотложных процедур, необходимых в полевых условиях. Процедуры и инструменты для этого должны быть доступны ближе к фронту, и мы должны обеспечить наличие квалифицированных хирургов в составе военных медицинских подразделений."
+ tech_field_hospital7_desc:0 "Хирургическое вмешательство - самая распространенная врачебная операция на поле боя. Необходимые средства для их проведения должны быть ближе к линии фронта, и мы должны сделать так, чтобы среди военных медиков были опытные хирурги."
  tech_field_hospital8:0 "Полевой госпиталь VIII"
- tech_field_hospital8_desc:0 "Хотя в полевой медицине было сделано много усовершенствований, многие достижения носят импровизированный характер, и нам не хватает устоявшейся доктрины. С увеличением опыта мы сможем более четко объяснить роль этих подразделений и сделать импровизированные инновации постоянными."
+ tech_field_hospital8_desc:0 "Несмотря на достижения военно-полевой медицины, многие изобретения сделаны наскоро, и у нас нет общей доктрины. Накопив достаточно опыта, мы можем точнее очертить круг задач этих частей и сделать временные улучшения постоянными."
 
  #KiS | Logistics Company
  tech_logistics_company:0 "Рота обеспечения I"
@@ -327,13 +327,13 @@
  tech_logistics_company4:0 "Рота обеспечения IV"
  tech_logistics_company4_desc:0 "Разработка стандартной номенклатуры для ресурсов уменьшит путаницу и сделает планирование более эффективным."
  tech_logistics_company5:0 "Рота обеспечения V"
- tech_logistics_company5_desc:0 "Наличие в наших рядах специализированных сотрудников по логистике обеспечит использование сетей поддержки для минимизации потерь."
+ tech_logistics_company5_desc:0 "Если у нас есть специальный офицер по вопросам тыла, то сеть снабжения будет функционировать эффективнее."
  tech_logistics_company6:0 "Рота обеспечения VI"
- tech_logistics_company6_desc:0 "Наличие в наших рядах специализированных сотрудников по логистике обеспечит использование сетей поддержки для минимизации потерь."
+ tech_logistics_company6_desc:0 "Если у нас есть специальный офицер по вопросам тыла, то сеть снабжения будет функционировать эффективнее."
  tech_logistics_company7:0 "Рота обеспечения VII"
- tech_logistics_company7_desc:0 "Наличие в наших рядах специализированных сотрудников по логистике обеспечит использование сетей поддержки для минимизации потерь."
+ tech_logistics_company7_desc:0 "Если у нас есть специальный офицер по вопросам тыла, то сеть снабжения будет функционировать эффективнее."
  tech_logistics_company8:0 "Рота обеспечения VIII"
- tech_logistics_company8_desc:0 "Наличие в наших рядах специализированных сотрудников по логистике обеспечит использование сетей поддержки для минимизации потерь."
+ tech_logistics_company8_desc:0 "Если у нас есть специальный офицер по вопросам тыла, то сеть снабжения будет функционировать эффективнее."
 
  #KiS | Military Police
  tech_military_police:0 "Военная полиция I"
@@ -345,13 +345,13 @@
  tech_military_police4:0 "Военная полиция IV"
  tech_military_police4_desc:0 "Поддержание порядка на оккупированной территории означает в равной мере и возврат к обычной жизни, и безжалостное уничтожение сопротивления. Наша военная полиция должна своевременно начинать этот процесс, чтобы обеспечить безопасность и для мирных граждан, и для солдат."
  tech_military_police5:0 "Военная полиция V"
- tech_military_police5_desc:0 "Регулярные войска могут справиться с оккупацией в течение более короткого периода времени."
+ tech_military_police5_desc:0 "Регулярные части могут короткое время поддерживать порядок на оккупированной территории, но они в первую очередь солдаты. Если мы внедрим военную полицию в нашу армию, то получим специалистов, способных реагировать на действия сопротивления и расследовать диверсии."
  tech_military_police6:0 "Военная полиция VI"
- tech_military_police6_desc:0 "Регулярные войска могут справиться с оккупацией в течение более короткого периода времени."
+ tech_military_police6_desc:0 "Регулярные части могут короткое время поддерживать порядок на оккупированной территории, но они в первую очередь солдаты. Если мы внедрим военную полицию в нашу армию, то получим специалистов, способных реагировать на действия сопротивления и расследовать диверсии."
  tech_military_police7:0 "Военная полиция VII"
- tech_military_police7_desc:0 "Регулярные войска могут справиться с оккупацией в течение более короткого периода времени."
+ tech_military_police7_desc:0 "Регулярные части могут короткое время поддерживать порядок на оккупированной территории, но они в первую очередь солдаты. Если мы внедрим военную полицию в нашу армию, то получим специалистов, способных реагировать на действия сопротивления и расследовать диверсии."
  tech_military_police8:0 "Военная полиция VIII"
- tech_military_police8_desc:0 "Регулярные войска могут справиться с оккупацией в течение более короткого периода времени."
+ tech_military_police8_desc:0 "Регулярные части могут короткое время поддерживать порядок на оккупированной территории, но они в первую очередь солдаты. Если мы внедрим военную полицию в нашу армию, то получим специалистов, способных реагировать на действия сопротивления и расследовать диверсии."
 
  #KiS | Signal Company (Radio)
  tech_signal_company:0 "Рота связи I"
@@ -363,13 +363,13 @@
  tech_signal_company4:0 "Рота связи IV"
  tech_signal_company4_desc:0 "Среди наших связистов есть люди с непосредственным опытом применения этих средств связи на поле боя. Подключив их к разработке новых технологий коммуникации, мы найдем применение их знаниям."
  tech_signal_company5:0 "Рота связи V"
- tech_signal_company5_desc:0 "Установление и поддержание связи в полевых условиях всегда требовало особых навыков. С появлением новых технологий связи и обнаружения во время Великой войны перед практиком открылись новые возможности."
+ tech_signal_company5_desc:0 "Для установления и поддержания связи на поле боя всегда требовались особые навыки. С возникновением новых средств связи и обнаружения в ходе Великой войны открылись новые практические возможности."
  tech_signal_company6:0 "Рота связи VI"
- tech_signal_company6_desc:0 "Сигнальные компании, сосредоточенные на связи между различными родами войск, могут обеспечить сухопутным войскам возможность координировать усилия с морскими и воздушными операциями и более оперативно планировать свои перемещения."
+ tech_signal_company6_desc:0 "Роты связи, обеспечивающие обмен данными между разными родами войск, помогают сухопутным войскам наладить координацию с морскими и воздушными силами и быстрее планировать свои действия."
  tech_signal_company7:0 "Рота связи VII"
- tech_signal_company7_desc:0 "Все чаще портативные технологии связи становятся более жизнеспособными для личного ношения в виде рюкзака. Эта возросшая мобильность корпуса связи должна быть использована."
+ tech_signal_company7_desc:0 "Новые портативные устройства связи можно переносить в рюкзаке. Необходимо использовать эту улучшенную мобильность рот связи."
  tech_signal_company8:0 "Рота связи VIII"
- tech_signal_company8_desc:0 "Среди наших специалистов по связи есть люди, обладающие непревзойденными знаниями из первых рук об использовании этого оборудования в полевых условиях. Привлекая их к исследованиям новых коммуникационных технологий, мы можем использовать их опыт и знания."
+ tech_signal_company8_desc:0 "Среди наших связистов есть люди с непосредственным опытом применения этих средств связи на поле боя. Подключив их к разработке новых технологий коммуникации, мы найдем применение их знаниям."
 
  #KiS | Maintenance Company (Radio)
  tech_maintenance_company:0 "Ремонтная рота I"
@@ -381,13 +381,13 @@
  tech_maintenance_company4:0 "Ремонтная рота IV"
  tech_maintenance_company4_desc:0 "Опыт создания техники с нагруженным резервом, накопленный в Великую войну, можно применить, чтобы упростить процедуру ремонта более современной техники."
  tech_maintenance_company5:0 "Ремонтная рота V"
- tech_maintenance_company5_desc:0 "Техническое обслуживание, ремонт и капитальный ремонт важны для поддержания надежности и безопасности использования военной техники. Наличие компаний, занимающихся этим, обеспечит должное внимание к технике."
+ tech_maintenance_company5_desc:0 "Обслуживание, починка и полный ремонт обеспечивают надежную, безопасную эксплуатацию военной техники. Чтобы уделить должное внимание этой проблеме, необходимо создать специальные роты."
  tech_maintenance_company6:0 "Ремонтная рота VI"
- tech_maintenance_company6_desc:0 "Процедуры регулярного оперативного технического обслуживания минимизируют риски поломки оборудования и предупреждают войска о необходимости его замены до того, как это произойдет."
+ tech_maintenance_company6_desc:0 "Регулярный техосмотр уменьшает вероятность поломки техники и заранее выявляет детали, которые нужно заменить."
  tech_maintenance_company7:0 "Ремонтная рота VII"
- tech_maintenance_company7_desc:0 "Обеспечение того, чтобы наши войска всегда имели в полевых условиях основные материалы для проведения обычного ремонта, предотвратит дальнейшее использование оборудования, которое, как известно, повреждено."
+ tech_maintenance_company7_desc:0 "Обеспечив войска наиболее востребованными ресурсами для стандартного ремонта, мы покончим с практикой использования сломанной техники."
  tech_maintenance_company8:0 "Ремонтная рота VIII"
- tech_maintenance_company8_desc:0 "Опыт проектирования активного резервирования в годы Великой войны может быть возобновлен для работы с более современным оборудованием, чтобы облегчить техническое обслуживание."
+ tech_maintenance_company8_desc:0 "Опыт создания техники с нагруженным резервом, накопленный в Великую войну, можно применить, чтобы упростить процедуру ремонта более современной техники."
 
  motorised_infantry:0 "Моторизированная пехота"
  motorised_infantry_desc:0 "Пересадив медлительную пехоту на автотранспорт, мы резко увеличим ее мобильность, что позволит быстрее реагировать на возникающие ситуации и разрабатывать новые стратегии."
@@ -409,7 +409,7 @@
  streamlined_line:0 "Стандартизированный конвейер"
  streamlined_line_desc:0 "Стандартизация и жестко заданная структура конвейерной линии являются залогами ее эффективности и безопасности. Мы должны сделать упор на эти аспекты в развитии нашей промышленности."
  concentrated_industry:0 "Концентрированная промышленность I"
- concentrated_industry_desc:0 "Разместив наше производство в нескольких ключевых центрах, мы резко увеличим его эффективность.\n\n"
+ concentrated_industry_desc:0 "Разместив наше производство в нескольких ключевых центрах, мы резко увеличим его эффективность."
  concentrated_industry2:0 "Концентрированная промышленность II"
  concentrated_industry2_desc:0 "Дальнейшая концентрация промышленности позволит сократить издержки."
  concentrated_industry3:0 "Концентрированная промышленность III"
@@ -419,7 +419,7 @@
  concentrated_industry5:0 "Концентрированная промышленность V"
  concentrated_industry5_desc:0 "Крупные промышленные комплексы включают в себя множество разных производств, что уменьшает расходы на транспорт и рабочую силу."
  dispersed_industry:0 "Рассредоточенная промышленность I"
- dispersed_industry_desc:0 "Рассредоточив наше производство, мы помешаем противнику сделать его легкой целью во время войны.\n\n"
+ dispersed_industry_desc:0 "Рассредоточив наше производство, мы помешаем противнику сделать его легкой целью во время войны."
  dispersed_industry2:0 "Рассредоточенная промышленность II"
  dispersed_industry2_desc:0 "Дальнейшая децентрализация нашей промышленности не даст врагу нанести удар по отдельным ее частям."
  dispersed_industry3:0 "Рассредоточенная промышленность III"
@@ -436,7 +436,7 @@
  oil_plant_desc:0 "Сеть заводов, занимающихся синтетической очисткой и переработкой нефтепродуктов, – следующий шаг к обеспечению нашего государства горючим."
  improved_oil_plant:0 "Улучшенная нефтепереработка"
  improved_oil_plant_desc:0 "Использование ранее экспериментальных методов очистки в промышленном масштабе позволит нам быстрее приспосабливаться под доступные материалы и требования."
- RAILWAY_TITLE:0 "RAILWAY"
+ RAILWAY_TITLE:0 "ЖЕЛЕЗНАЯ ДОРОГА"
  construction0:0 "Modern Infrastructure"
  construction0_desc:0 "The thoughtful design of infrastructure appeared at the beginning of the 19th century as part of development work in European metropolises."
 
