--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -306,7 +306,7 @@
  GER_kapp_putsch_timer:0 "Недовольство правого крыла"
  GER_kapp_putsch_timer_desc:0 "Правое крыло и националисты в стране глубоко недовольны текущей ситуацией и правительством. Маленькое пламя разрастется в ужасный пожар."
  GER_kapp_putsch_timer_tt:0 "Соблюдение Версальского договора требует запретить националистические военизированные формирования."
- GER_fix_belgium_supply:0 "Построить линии снабжения в Бельгию"
+ GER_fix_belgium_supply:0 "Построить линии снабжения в Бельгии"
  GER_fortifications:0 "Фронтовые укрепления"
  GER_fortifications_desc:0 "Современная война означает бесконечные траншеи, плотную колючую проволоку, прочные бетонные укрепления и жестокое размещение пулеметов. В частности, чтобы противостоять французам, мы должны построить и подготовить мощные укрепления, чтобы блокировать отвлекающие маневры противника и укрепить нашу оборону в важных точках. Ни одна пядь земли НЕ БУДЕТ ПОТЕРЯНА!"
  GER_fund_engineering_corps:0 "Инженерный корпус фонда"
