--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -2691,14 +2691,29 @@
  GRE_entente_reparations:0 "Entente War Reparations"
  GRE_greek_resistance:0 "Greek Resistance"
 
- #Sennusi
+ # Sennusi
  LBA_Senussi_Order:0 "Орден Сенусси"
- LBA_Senussi_Order_desc:0 "Мы победим или умрем."
- LBA_traders_of_east_sahara:0 "Торговцы Восточной Сахары"
+ LBA_Senussi_Order_desc:0 "The Senussi Order is a religious and political force deeply rooted in Sufi Islam, advocating for spiritual purity, unity, and resistance to foreign influence. Founded in the early 19th century, the Order has gained widespread support among the Bedouin tribes of North Africa. Its leaders, both revered as spiritual guides and respected as military strategists, wield significant authority over their followers. The Senussi’s network of zawiyas (religious lodges) fosters cohesion across vast desert territories, making them a formidable opponent to colonial powers.\n\n§Y''We win or we die.''§!"
  
- #Wadai
+ LBA_traders_of_east_sahara:0 "Торговцы Восточной Сахары"
+ LBA_traders_of_east_sahara_desc:0 "For centuries, the Senussi have thrived as the custodians of trade routes crisscrossing the vast expanses of the Eastern Sahara. Leveraging their deep knowledge of the desert and strong ties with local tribes, the Senussi Order facilitates the movement of goods, including salt, dates, gold, and livestock, through harsh, otherwise impassable terrains. These networks not only provide economic sustenance but also extend the Order’s influence across North Africa and into the Sahel."
+ 
+ # Dervish
+ SOM_dervish_movement:0 "Dervish Movement"
+ SOM_dervish_movement_desc:0 "The Dervish Movement, led by Muhammad Abdullah Hassan, represents a grassroots response to colonial rule in the Horn of Africa. Focused on Islamic revival and Somali unity, the movement seeks to mobilize local tribes against foreign domination. While it has gained some support among the population, it faces significant challenges from British and Italian forces, leading to ongoing conflict and instability in the region."
+ 
+ SOM_mobile_state:0 "Mobile State"
+ SOM_mobile_state_desc:0 "The Dervish forces, led by Muhammad Abdullah Hassan, rely on their ability to remain highly mobile in the vast, harsh terrains of Somalia. Utilizing light cavalry and camels, the Dervishes can move swiftly across deserts and plains, outmaneuvering slower, more conventional colonial forces. However, this mobility comes at the cost of heavy equipment and infrastructure, limiting their capacity for sustained engagements and logistical support."
+ 
+ # Wadai
  CHA_elite_cavalry:0 "Элитная кавалерия"
  CHA_elite_cavalry_desc:0 "У Вадаи есть способные и очень опытные военные, хорошо разбирающиеся в мобильных боях и постоянных набегах, которые характеризовали традиционные войны в регионе. Ядро его армии - элитные кавалерийские войска, многие из которых принадлежат к воинской знати."
+ 
+ # Egypt
+ EGY_british_colonial_interference:0 "British Colonial Interference"
+ EGY_british_colonial_interference_desc:0 "Established under the pretext of maintaining stability and order, British colonial rule has undermined Egyptian sovereignty and curtailed the authority of the Khedive. While the British aim to secure their economic interests, such as control over the Suez Canal and cotton exports, their heavy-handed tactics provoke widespread resentment among the Egyptian populace. This colonial interference fosters a growing nationalist sentiment, as many Egyptians yearn for self-determination and a government free from foreign control"
+ EGY_nahda:0 "Nahda"
+ EGY_nahda_desc:0 "The Nahda, or ''Awakening,'' represents a significant cultural and intellectual revival in Egypt, characterized by a flourishing of literature, arts, and education that seeks to redefine Egyptian identity and promote modernization. Influenced by Western thought and ideas, Egyptian intellectuals, poets, and writers, such as Ahmad Shawqi and Hafez Ibrahim, are at the forefront of this renaissance, encouraging critical discourse and national pride. As schools and universities expand access to education, a new generation of politically aware citizens emerges, advocating for reforms and greater autonomy from colonial rule. This cultural awakening serves as a powerful catalyst for Egyptian nationalism, laying the groundwork for future movements seeking self-determination and independence."
  
  #Japan
  JAP_uncontrollable_military:0 "Неуправляемые Военные"
@@ -2746,7 +2761,7 @@
 
  compania_de_lota_y_coronel:0 "Compañías Salitreras"
 
- #Liberia, land of liberty, what a place to be president tubman
+ #Liberia, land of "liberty", what a place to be president tubman
  LIB_frontier_force:0 "Пограничные силы"
  LIB_johnson_binger_treaty_1909:0 "Договор Джонсона-Бингера"
  LIB_johnson_binger_treaty_1909_desc:0 "Договор Джонсона-Бингера 1909 года позволяет нам размещать наши войска в приграничных районах, однако количество, которое мы можем использовать, строго ограничено."
@@ -2764,6 +2779,13 @@
  LIB_syndicalism_idea:0 "Синдикализм"
  LIB_french_staff:0 "Французский опыт офицеров"
  LIB_german_staff:0 "Прусский опыт офицеров"
+
+# South Africa
+ SAF_mining_reliant_economy:0 "Mining Reliant Economy"
+ SAF_mining_reliant_economy_desc:0 "The foundation of South Africa’s economy lies deep beneath the earth, where gold, diamonds, and precious minerals drive both prosperity and vulnerability. As the lifeblood of the nation's wealth, the mining industry dominates every facet of economic life, from employment to exports. However, this reliance comes at a cost—economic stability is at the mercy of fluctuating global demand and labor unrest in the mines. Any disruption could send shockwaves through the nation's fragile industrial base."
+
+ SAF_segregation:0 "Segregation"
+ SAF_segregation_desc:0 "Rooted in policies of racial division, the South African government enforces a system of segregation that marginalizes the majority of its population. From land ownership restrictions to labor laws, Black, Coloured, and Indian South Africans are excluded from economic and political power."
 
  #Poland
  POL_idea_polish_reclamation:0 "Возрождение Польши"
@@ -3145,5 +3167,6 @@
  GEO_minority_problem:0 "Minority Protests"
  GEO_minority_problem_desc:0 "Georgia isn't just home to Georgians, but also has Ossetians, Abkhazians, and various other minority groups that feud with the central government."
 
+ #Belorussia
  BLR_weak_national_identity:0 "Weak National Identity"
  BLR_weak_national_identity_desc:0 "While many nations in Eastern Europe have experienced a national awakening in the second half of the 19th century, the idea of a Belarusian nation only started to appear in this century. Now very few Belarusians can even comprehend the idea of nationalism, let alone embrace it, and many even consider Belarusians to be nothing but Polonised Russians or poor, uncultured peasants unworthy of the title of "nation""
