--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9376,3 +9376,4 @@ ROM_king_view_complete_approve2:0 "§GVery positive§!, which gives us:\nPolitic
 ROM_kings_rotation:0 "King's Rotation"
 ROM_useful_ally_focus_tt:0 "§CModifies§! the effects of the '§YKing's Country§!' mechanic by the following:\n§7Positive§!: Political Advisor Cost: §G-15%§!\n§GVery Positive§!: Political Advisor Cost: §G-25%§!"
 ROM_autocomplete_ww1:0 "Once the §YGreat War§! starts, this focus will automatically be completed"
+ROM_unite_with_moldova:0 "Unite with Moldova"
