--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5383,7 +5383,7 @@ ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly lan
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
-ROM_encourage_romanian_migration_dobruja_desc:0 ""
+ROM_encourage_romanian_migration_dobruja_desc:0 "If we encourage migration to Dobruja, we can Romanianize the area and thus make it Romanian."
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
 ROM_concessions_to_muslim_romanians_desc:0 ""
 ROM_dreams_of_a_great_romania:0 "Dreams of a Greater Romania"
@@ -5594,6 +5594,7 @@ ROM_secure_the_countryside:0 "Secure the Countryside"
 ROM_prussian_values:0 "Prussian Values"
 ROM_recover_from_defeat:0 "Recover from Defeat"
 ROM_victory_in_the_great_war:0 "Begin Demobilization"
+
 
 
 #custom tooltips
