--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5594,7 +5594,9 @@ ROM_secure_the_countryside:0 "Secure the Countryside"
 ROM_prussian_values:0 "Prussian Values"
 ROM_recover_from_defeat:0 "Recover from Defeat"
 ROM_victory_in_the_great_war:0 "Begin Demobilization"
-
+ww1_romania.68.t:0 "The War has Ended!"
+ww1_romania.68.desc:0 "The Great War has affected Romania's economy badly, inflation is off the roofs and we have debts to pay and reperations to complete. We need to fix this problem immediately."
+ww1_romania.68.a:0 "There is more?!"
 
 
 #custom tooltips
