--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4333,7 +4333,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.6.c: "Long live Sultan Ahmed Nihad"
  ottoman.6.e: "Long live Sultan Yusuf İzzeddin"
  ottoman.7.t: "Ottoman Sultan Restored"
- ottoman.7.d: "After the recent reactionary coup that took place in the empire, the new Yıldız Teşkilatı backed government has restored sultan to his throne. Seeing from how the recent sultans were unable to rule efficiently, thi begs some questions... If the new sultan will be able to rule with competency and save the empire? Well, only history knows the answer to this question."
+ ottoman.7.d: "After the recent reactionary coup that took place in the empire, the new Yıldız Teşkilatı backed government has restored sultan to his throne. Seeing from how the recent sultans were unable to rule efficiently, this begs some questions... If the new sultan will be able to rule with competency and save the empire? Well, only history knows the answer to this question."
  ottoman.7.a: "With or without a sultan, the man is still sick..."
  ottoman.7.b: "Long live the sultan!"
  ottoman.8.t: "[TUR.GetAdjective] Demands our Annexation"
