--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -118,7 +118,7 @@ ww1_germanrework.12.t:0 "Mining Accident in the Ruhr"
 
 #National Census
 ww1_germanrework.18.t:0 "The Findings of the National Census"
- ww1_germanrework.18.d:0 ""
+ ww1_germanrework.18.d:0 "The findings of the national census have been delivered and examined by the administration. After reviewing the findings, a document has been prepared to advise the Reichstag and the Kaiser of the conclusions. These documents have highlighted how large portions of the empire lack vital infrastructure compared to our competitors in Europe, mass urbanization has led to housing shortages and public health growth is minimal - even reverting in some cities. These findings have concerned the Chancellor greatly who is keen to introduce legislature, commit new government investments, and bring in foreign experts to help the construction of a new sewer system to battle the poor public health in our key cities.\n\nThe findings of the national census have not been what many expected and will no doubt play a big part in the left's push for an increase in the Empire's social spending."
  ww1_germanrework.18.a:0 "Perhaps German society is not as progressive as we thought..."
 
 #1912 Miltary Conferance
@@ -133,7 +133,7 @@ ww1_germanrework.21.t:0 "Wilhelmine Germany"
 
 #Socialism in Germany
 ww1_germanrework.22.t:0 "Socialism in the German Empire"
- ww1_germanrework.22.d:0 ""
+ ww1_germanrework.22.d:0 "Since the unification of Germany; 1877, the SPD has grown in popularity exponentially. Unlike the right wing of the Reichstag, the left is mostly unified under the SPD with both moderate social democrats and revisionist republicans holding seats for the party's faction. However, the FVp's faction in the Reichstag also holds significant sway in the leftist wing.\n\nOutside of the Reichstag the workers of Germany are significantly unionized under moderate worker's unions - as of late the unions have become more and more restless, and working conditions in the industries have slowly declined with Germany's rise in demand. If not dealt with properly the unions have the power to cripple the economy, the government's saving grace is that the unions are decentralized without a common purpose, allowing the chancellor to make slower reforms that won't upset either the balance of power or the right-wing of the Reichstag."
  ww1_germanrework.22.a:0 "Being progressive won't win wars!"
 
 #The Fleeting Right-Wing
@@ -153,12 +153,12 @@ ww1_germanrework.25.t:0 "Einstein Comes to Germany"
 
 #Common Interests
 ww1_germanrework.35.t:0 "A Shooting on the Morrow"
- ww1_germanrework.35.d:0 ""
+ ww1_germanrework.35.d:0 "On the invitation of the Kaiser, Chancellor Hollweg has been received at Wilhelm's estate in Posen, no doubt to discuss the implications of and preparations for the coming Haldane mission. However, it seems that the Kaiser and Hollweg have found coming ground - pheasant shooting. The visit has been extended by a day so that the Kaiser and the Chancellor may make a small excursion into the countryside to take on a morning of pheasant shooting. The relationship between to two men hasn't exactly been cordial since Hollweg's appointment, perhaps this visit marks a change in their relationship, one where the Kaiser can place more faith in his chancellor."
  ww1_germanrework.35.a:0 "A sign of good faith"
 
 #Hollweg objects to naval expansion
 ww1_germanrework.38.t:0 "Hollweg Objects to Naval Expansion"
- ww1_germanrework.38.d:0 ""
+ ww1_germanrework.38.d:0 "Earlier this week, it was reported that the chancellor had come into conflict with Kaiser Wilhelm over the matter of the British Mission to Germany. Hollweg reportedly criticized the Kaiser's willingness to jeopardize detente between Great Britain and Germany, going on to denounce Tirpitz's 'war-mongering' as little more than throwing away detente instead for his own personal glory.\n\nIt seems that Hollweg is not going to stop advocating for the naval bill to be blocked by the Kaiser."
  ww1_germanrework.38.a:0 "It's better to ignore his ramblings"
 
 #Tirpitz promotes naval expansion
