Kingdom of Poland v5

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -12268,9 +12268,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_poland.9.d: ""Auwi" August Wilhelm von Preußen shall be crowned."
 
  ww1_poland.12.t: "[POL.GetNameDefCap] Established"
- ww1_poland.12.d: "The Poles now can have their own little country under our permission and benevolent supervision. Although times had been dark for the Polish peoples..."
+ ww1_poland.12.d: "Today, the Central Powers announced a patent on the establishment of State Power in the Kingdom of Poland. This patent follows the earlier Act of the Two Emperors, in which the Central Powers promised to establish a Polish state as part of their sphere of influence. The patent announced the creation of the Regency Council, which would govern the newly created Polish state until the election of its monarch. The General Governor of Warsaw and the General Governor of Lublin will oversee the establishment of the structures of the Kingdom, which, intended to be an integral part of the Mitteleuropa concept, will be politically, economically and militarily dominated by Germany. "
  ww1_poland.12.a: "They will go prosperity with our encouragement."
- ww1_poland.12.b: "Poland will one day rise up again, in might and freedom!\n(Play as [POL.GetFlag]Poland)"
+ ww1_poland.12.b: "Poland will one day rise up again!\n(Play as [POL.GetFlag]Poland)"
  ww1_poland.13.t: "Pressure from the League of Nations"
  ww1_poland.13.d: "The League of Nations, has been established for world peace and the settlement of international disputes, has requested an immediate ceasement of our invasion on Lithuania. International opinion is also says that they do not understand our aggressory decisions."
  ww1_poland.13.a: "Not gonna war with the all around the world..."
